--- a/upload.html
+++ b/upload.html
@@ -38,56 +38,60 @@
             <h2 id="fs-title">Form Selection</h2>
             <div id="fs-content-container">
                 <div id="fs-curvedvolume" class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" 
+                    alt="Sample of the curved volume form. Displaying a rabit stl." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Curved Volume</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div id="fs-foursidedcube" class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/fourSideCubeBunny 1.png" alt="" />
+                    <img class="fs-pic"src="./pictures/samples/fourSideCube-Bunny-sample.png" 
+                    alt="Sample of the four sided cube form. Displaying a rabit stl." />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Four-Sided Cube</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
-                <div id="fs-3" class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                <div id="fs-sixsidedtwoflapscube"  class="fs-item">
+                    <img class="fs-pic"src="./pictures/samples/sixSidedCube-Bunny-sample.png" 
+                    alt="Sample of the six sided cube form. Displaying a _ stl."/>
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Six-Sided Cube</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+                <div id="fs-sixsidedfourflapscube" class="fs-item">
+                    <img class="fs-pic"src="./pictures/samples/sixSidedCube-Bunny-sample.png" 
+                    alt="Sample of the six sided cube form. Displaying a _ stl."/>
+                    <div class="fs-text">
+                        <h3 class="fs-text-item">Cylinder</h3>
+                        <p class="fs-text-item">information</p>
+                    </div>
+                </div>
+                <div id="fs-cylinderelement"class="fs-item">
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
                     </div>
                 </div>
                 <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
-                    <div class="fs-text">
-                        <h3 class="fs-text-item">Form Name</h3>
-                        <p class="fs-text-item">information</p>
-                    </div>
-                </div>
-                <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
-                    <div class="fs-text">
-                        <h3 class="fs-text-item">Form Name</h3>
-                        <p class="fs-text-item">information</p>
-                    </div>
-                </div>
-                <div class="fs-item">
-                    <img class="fs-pic"src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img class="fs-pic"src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                     <div class="fs-text">
                         <h3 class="fs-text-item">Form Name</h3>
                         <p class="fs-text-item">information</p>
@@ -124,7 +128,7 @@
             <!--  navigation bar -->
             <nav class="nav-bar">
                 <!--  logo/name -->
-                <a href="./index.html"><img class="logo" src="./pictures/start page/LOGOTYPE_fall2023.png"
+                <a href="./index.html"><img class="logo" src="./pictures/start_page/LOGOTYPE_fall2023.png"
                         alt="Printerform logo"></a>
                 <!--  menu items -->
                 <ul id="menu">
@@ -154,12 +158,12 @@
                     <div class="carousel">
                         <div id="stlPreviews" class="carousel-view">
                             <div class="carousel-horses">
-                                <div  id="front_canvases" class="stl_display slide">
+                                <div  id="front_canvas" class="stl_display slide">
                                     <h4>Front View </h4>
                                     <div id="stl_view1" class="stl_cont stl_curve "></div> 
                                 </div>
                             
-                                <div  id="left_canvas" class="stl_display slide">
+                                <div  id="back_canvas" class="stl_display slide">
                                     <h4>Back View</h4>
                                     <div id="stl_view2" class="stl_cont stl_curve "></div>
                                 </div>
@@ -170,8 +174,16 @@
                             
                                 <div  id="left_canvas" class="stl_display slide">
                                     <h4>Left View</h4>
-                                    <div id="stl_view4" class="stl_cont tl_curve "></div>
+                                    <div id="stl_view4" class="stl_cont stl_curve "></div>
                                 </div> 
+                                <div  id="top_canvas" class="stl_display slide">
+                                    <h4>Top View</h4>
+                                    <div id="stl_view5" class="stl_cont stl_curve "></div>
+                                </div>
+                                <div  id="bottom_canvas" class="stl_display slide">
+                                    <h4>Right View</h4>
+                                    <div id="stl_view6" class="stl_cont stl_curve "></div>
+                                </div>
                             </div>
                         </div>
                         <div id="slide-controls" class="carousel-horses carousel-base">
@@ -183,6 +195,8 @@
                                 <button class="indicator" onclick="showSlides(1)">BACK</button>
                                 <button class="indicator" onclick="showSlides(2)">RIGHT</button>
                                 <button class="indicator" onclick="showSlides(3)">LEFT</button>
+                                <button class="indicator" onclick="showSlides(4)">TOP</button>
+                                <button class="indicator" onclick="showSlides(5)">BOTTOM</button>
                             </div>
                             <!-- Navigation Next View Buttons -->
                             <button class="indicator" onclick="moveSlide(1)">&#10095;</button>
@@ -268,12 +282,6 @@
                             <button id="nextStartPageBtn" class="next-button" type="button"> NEXT </button>
                         </div>
                     </div>
-                    <div id="edit-controls">
-                        <div id="edit-buttons" class ="bottom-buttons">
-                            <button id="backEditPageBtn" class="back-button" type="button">BACK</button>
-                            <button id = "openDownloadPopupBtn" class="download-button big-button" type="button"> PRINT </button>
-                        </div>
-                    </div>
                 </div>
 
             </div>
@@ -288,22 +296,22 @@
             <h1 class="title">OTHER FORMS</h1>
             <ul class="image-gallery">
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/fourSideCubeBunny 1.png" alt="" />
+                    <img src="./pictures/samples/fourSideCube-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
             </ul>
         </div>
@@ -344,17 +352,17 @@
         <div id="workflow">
             <div class="work-item">
                 <h2 class="work-item-title">Upload</h2>
-                <img class="work-item-pic" src="./pictures/start page/upload.png" />
+                <img class="work-item-pic" src="./pictures/start_page/upload.png" />
                 <p class="work-item-text">Upload any .STL file.</p>
             </div>
             <div class="work-item">
                 <h2 class="work-item-title">Modify</h2>
-                <img class="work-item-pic" src="./pictures/start page/modify.png" />
+                <img class="work-item-pic" src="./pictures/start_page/modify.png" />
                 <p class="work-item-text">Modify your selections to best fit the shape of your file.</p>
             </div>
             <div class="work-item">
                 <h2 class="work-item-title">Download</h2>
-                <img class="work-item-pic" src="./pictures/start page/download.png" />
+                <img class="work-item-pic" src="./pictures/start_page/download.png" />
                 <p class="work-item-text">Download your .PDF to print.</p>
             </div>
         </div>
@@ -365,22 +373,22 @@
             <h1 class="title">Gallery</h1>
             <ul class="image-gallery">
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/fourSideCubeBunny 1.png" alt="" />
+                    <img src="./pictures/samples/fourSideCube-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
                 <li class="image-gallery-item">
-                    <img src="./pictures/start page/curved_sample 1.png" alt="" />
+                    <img src="./pictures/samples/curved-Bunny-sample.png" alt="" />
                 </li>
             </ul>
         </div>
